kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend
  namespace: production-grade-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: mayrhatte09/production-grade-app-deployment-backend:v10
          imagePullPolicy: Always

          ports:
            - containerPort: 3000
